Tereng Upated all

--- a/About Us.html
+++ b/About Us.html
@@ -17,9 +17,11 @@
 <!--nav-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#" ><img src="images/123.png" alt="Smiley face" height="60" width="100">Baguio Transport </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+    </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
@@ -33,7 +35,7 @@
         <a class="nav-link" href="The Team.html">The Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Location & Fares.html">Location & Fares</a>
+        <a class="nav-link" href="Location and Fares.html">Location & Fares</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="Contact Us.html">Contact Us</a>
