--- a/The Team.html
+++ b/The Team.html
@@ -17,9 +17,11 @@
 <!--nav-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+ <a class="navbar-brand" href="#" ><img src="images/123.png" alt="Smiley face" height="60" width="100">Baguio Transport </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+    </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
@@ -47,38 +49,154 @@
 
 
     <!--Card Regular-->
-    <div class="card card-cascade">
+    <h2>Our Stuff</h2>
+    <div class="row">
+            <!--Subheading-->
+            <div class="col-md-4">
+                <h4 id=""><strong></strong></h4>
 
-        <!--Card image-->
-        <div class="view overlay">
-            <img src="https://mdbootstrap.com/img/Photos/Others/men.jpg" class="img-fluid" alt="">
-            <a>
-                <div class="mask rgba-white-slight"></div>
-            </a>
+                <!--Description-->
+                <p class="description"></p>
+
+               <!--Section: Live preview-->
+                <section>
+
+                    <!--Card-->
+                    <div class="card card-cascade">
+
+                        <!--Card image-->
+                        <div class="view overlay">
+                            <img src="Images/dela cruz.jpg" class="img-fluid" alt="placeholder image with a man">
+                            <a>
+                                <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-body text-center">
+                            <!--Title-->
+                            <h4 class="card-title"><strong>Aaron Dela Cruz</strong></h4>
+                            <h5>Executive Director</h5>
+
+                            <p class="card-text">Aaron joined the Company as the Executive Director in August 2017. Reporting to the Board of Directors, he is responsible for all aspects of the Company's operation, including transportation, finance and accounting, human resources, technology, contracts, and regulatory requirements.
+                            </p>
+
+                            <!--Facebook-->
+                            <a type="button" class="btn-floating btn-small btn-fb waves-effect waves-light"><i class="fa fa-facebook"></i></a>
+                            <!--Twitter-->
+                            <a type="button" class="btn-floating btn-small btn-tw waves-effect waves-light"><i class="fa fa-twitter"></i></a>
+                            <!--Google +-->
+                            <a type="button" class="btn-floating btn-small btn-dribbble waves-effect waves-light"><i class="fa fa-dribbble"></i></a>
+
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+
+                </section>
+                <!--Section: Live preview-->
+            </div>
+            <div class="col-md-4">
+                <!--Subheading-->
+                <h4 id=""><strong></strong></h4>
+
+                <!--Description-->
+                <p class="description"></p>
+
+              <!--Section: Live preview-->
+                <section>
+
+                    <!--Card-->
+                    <div class="card card-cascade">
+
+                        <!--Card image-->
+                        <div class="view overlay">
+                            <img src="Images/goku.jpg" class="img-fluid" alt="placeholder image with a man">
+                            <a>
+                                <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-body text-center">
+                            <!--Title-->
+                            <h4 class="card-title"><strong>Son Goku</strong></h4>
+                            <h5>Transportation Manager</h5>
+
+                            <p class="card-text">Goku joined the Company in August of 2015.  After Saving the world and deafeating all the villians who tried to destroy earth , Goku hired to be the Transportation Manager for the Company. </p>
+
+                            <!--Facebook-->
+                            <a type="button" class="btn-floating btn-small btn-fb waves-effect waves-light"><i class="fa fa-facebook"></i></a>
+                            <!--Twitter-->
+                            <a type="button" class="btn-floating btn-small btn-tw waves-effect waves-light"><i class="fa fa-twitter"></i></a>
+                            <!--Google +-->
+                            <a type="button" class="btn-floating btn-small btn-dribbble waves-effect waves-light"><i class="fa fa-dribbble"></i></a>
+
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+
+                </section>
+                <!--Section: Live preview-->
+
+            </div>
+            <div class="col-md-4">
+                <!--Subheading-->
+                <h4 id=""><strong></strong></h4>
+
+                <!--Description-->
+                <p class="description"></p>
+
+                <!--Section: Live preview-->
+                <section>
+
+                    <!--Card-->
+                    <div class="card card-cascade">
+
+                        <!--Card image-->
+                        <div class="view overlay">
+                            <img src="Images/KAKASHI HATEKE.jpg" class="img-fluid" alt="placeholder image with a man">
+                            <a>
+                                <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-body text-center">
+                            <!--Title-->
+                            <h4 class="card-title"><strong>Kakashi Hatake</strong></h4>
+                            <h5>Office Manager</h5>
+
+                            <p class="card-text">Kakashi was hired to be the Office Manager for the Company, after naruto take over his seat 
+                            	being the hokage ,he is responsible for a number of varied and diverse functions, including human resources, payroll, and accounts payable and receivable. She is also the manager of Customer Service, providing a vital leadership role in helping solve the unique transportation challenges that face many of our clients.
+
+
+                            </p>
+
+                            <!--Facebook-->
+                            <a type="button" class="btn-floating btn-small btn-fb waves-effect waves-light"><i class="fa fa-facebook"></i></a>
+                            <!--Twitter-->
+                            <a type="button" class="btn-floating btn-small btn-tw waves-effect waves-light"><i class="fa fa-twitter"></i></a>
+                            <!--Google +-->
+                            <a type="button" class="btn-floating btn-small btn-dribbble waves-effect waves-light"><i class="fa fa-dribbble"></i></a>
+
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+
+                </section>
+                <!--Section: Live preview-->
+            </div>
         </div>
-        <!--/.Card image-->
-
-        <!--Card content-->
-        <div class="card-body text-center">
-            <!--Title-->
-            <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-            <h5>Web developer</h5>
-
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
-            </p>
-
-            <!--Facebook-->
-            <a type="button" class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"></i></a>
-            <!--Twitter-->
-            <a type="button" class="btn-floating btn-small btn-tw"><i class="fa fa-twitter"></i></a>
-            <!--Google +-->
-            <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fa fa-dribbble"></i></a>
-
-        </div>
-        <!--/.Card content-->
-
-    </div>
-    <!--/.Card Regular-->
+ 
       <!--Footer-->
       <footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
       
