--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 
 </head>
 <body>
+
 	<div class="container">
+
 <!--nav-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+     <a class="navbar-brand" href="#" ><img src="images/123.png" alt="Smiley face" height="60" width="100">Baguio Transport </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+    </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
@@ -33,7 +37,7 @@
         <a class="nav-link" href="The Team.html">The Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Location & Fares.html">Location & Fares</a>
+        <a class="nav-link" href="Location and Fares.html">Location & Fares</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="Contact Us.html">Contact Us</a>
@@ -43,8 +47,23 @@
  
 </nav>
 <!--nav-->
-
+<h1 id="School-Vision">Location Served</h1>
+<p>Location of the following communities are eligible for the service </p>
+<ul>
+  <li>Baguio City</li>
+  <li>La Union</li>
+  <li>Pangasinan</li>
+  <li>San Jose City</li>
+  <li>Cabanatuan</li>
+</ul>  
+<h3 id="School-Mission">Fares</h3>
+<p>All in Location rides are ₱150-280 .  We will pick you up at your home, at the time that you request, and bring you to your requested destination.</p>
+<br>
+<p>Pre-paid fare passes are also available for purchase, and make a wonderful gift for a friend or family member in need of the service. </p>
+<br>
+<p>The process is simple, and the service is safe, reliable and affordable.  Just give us a call and reserve your trip!</p>
 <!--Carousel Wrapper-->
+<br>
 <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
     <!--Indicators-->
     <ol class="carousel-indicators">
