--- a/Contact Us.html
+++ b/Contact Us.html
@@ -33,7 +33,7 @@
         <a class="nav-link" href="The Team.html">The Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Location & Fares.html">Location & Fares</a>
+        <a class="nav-link" href="Location and Fares.html">Location & Fares</a>
       </li>
        <li class="nav-item active">
         <a class="nav-link" href="Contact Us.html">Contact Us</a>
@@ -44,46 +44,64 @@
 </nav>
 <!--nav-->
 
-<!--Carousel Wrapper-->
-<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-    <!--Indicators-->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-    </ol>
-    <!--/.Indicators-->
-    <!--Slides-->
-    <div class="carousel-outer" role="listbox">
-        <!--First slide-->
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="images/1.jpg" alt="First slide">
-        </div>
-        <!--/First slide-->
-        <!--Second slide-->
-        <div class="carousel-item">
-            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(136).jpg" alt="Second slide">
-        </div>
-        <!--/Second slide-->
-        <!--Third slide-->
-        <div class="carousel-item">
-            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(137).jpg" alt="Third slide">
-        </div>
-        <!--/Third slide-->
-    </div>
-    <!--/.Slides-->
-    <!--Controls-->
-    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-    <!--/.Controls-->
-</div>
-<!--/.Carousel Wrapper-->
+<div class="col-md-6 mb-4">
+
+                    <!--Naked Form-->
+                    <div class="card-body">
+
+                        <!--Header-->
+                        <div class="text-center">
+                            <h3>
+                                <i class="fa fa-envelope"></i> Contact Us:</h3>
+                            <hr class="mt-2 mb-2">
+                        </div>
+
+                        <!--Body-->
+                        <p>We'll write rarely, but only the best content.</p>
+                        <br>
+
+                        <!--Body-->
+                        <div class="md-form">
+                            <i class="fa fa-user prefix grey-text"></i>
+                            <input type="text" id="contactForm-name" class="form-control">
+                            <label for="contactForm-name">Your name</label>
+                        </div>
+
+                        <div class="md-form">
+                            <i class="fa fa-envelope prefix grey-text"></i>
+                            <input type="text" id="contactForm-email" class="form-control">
+                            <label for="contactForm-email">Your email</label>
+                        </div>
+
+                        <div class="md-form">
+                            <i class="fa fa-tag prefix grey-text"></i>
+                            <input type="text" id="contactForm-subj" class="form-control">
+                            <label for="contactForm-subj">Subject</label>
+                        </div>
+
+                        <div class="md-form">
+                            <i class="fa fa-pencil prefix grey-text"></i>
+                            <textarea type="text" id="contactForm-mess" class="md-textarea"></textarea>
+                            <label for="contactForm-mess">Icon Prefix</label>
+                        </div>
+
+                        <div class="text-center">
+                            <button class="btn btn-default waves-effect waves-light">Submit</button>
+
+                            <div class="call">
+                                <br>
+                                <p>Or would you prefer to call?
+                                    <br>
+                                    <span>
+                                        <i class="fa fa-phone"> </i>
+                                    </span> + 63 936 950 2151</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!--Naked Form-->
+
+                </div>
     <h3>Welcome to Baguio Transport</h3>
           <p class="text-justify">Baguio Transport is a new transportation service available to residents of Baguio City, Nueva Ecija, La Union , and Pangasinan. If you live and work in one of these Locations, and need transportation to and from your place of business, you are eligible to use Baguio Transport.</p>
                 
