--- a/Location and Fares.html
+++ b/Location and Fares.html
@@ -17,9 +17,11 @@
 <!--nav-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#" ><img src="images/123.png" alt="Smiley face" height="60" width="100">Baguio Transport </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+    </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
@@ -33,7 +35,7 @@
         <a class="nav-link" href="The Team.html">The Team</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="Location & Fares.html">Location & Fares</a>
+        <a class="nav-link" href="Location and Fares.html">Location & Fares</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="Contact Us.html">Contact Us</a>
@@ -43,49 +45,24 @@
  
 </nav>
 <!--nav-->
+   <h1 id="School-Vision">Location Served</h1>
+<p>Location of the following communities are eligible for the service </p>
+<ul>
+  <li>Baguio City</li>
+  <li>La Union</li>
+  <li>Pangasinan</li>
+  <li>San Jose City</li>
+  <li>Cabanatuan</li>
+</ul>  
+<h3 id="School-Mission">Fares</h3>
+<p>All in Location rides are ₱150-280 .  We will pick you up at your home, at the time that you request, and bring you to your requested destination.</p>
+<br>
+<p>Pre-paid fare passes are also available for purchase, and make a wonderful gift for a friend or family member in need of the service. </p>
+<br>
+<p>The process is simple, and the service is safe, reliable and affordable.  Just give us a call and reserve your trip!</p>
+    
 
-<!--Carousel Wrapper-->
-<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-    <!--Indicators-->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-    </ol>
-    <!--/.Indicators-->
-    <!--Slides-->
-    <div class="carousel-outer" role="listbox">
-        <!--First slide-->
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="images/1.jpg" alt="First slide">
-        </div>
-        <!--/First slide-->
-        <!--Second slide-->
-        <div class="carousel-item">
-            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(136).jpg" alt="Second slide">
-        </div>
-        <!--/Second slide-->
-        <!--Third slide-->
-        <div class="carousel-item">
-            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(137).jpg" alt="Third slide">
-        </div>
-        <!--/Third slide-->
-    </div>
-    <!--/.Slides-->
-    <!--Controls-->
-    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-    <!--/.Controls-->
-</div>
-<!--/.Carousel Wrapper-->
-    <h3>Welcome to Baguio Transport</h3>
-          <p class="text-justify">Baguio Transport is a new transportation service available to residents of Baguio City, Nueva Ecija, La Union , and Pangasinan. If you live and work in one of these Locations, and need transportation to and from your place of business, you are eligible to use Baguio Transport.</p>
+   
                 
       <!--Footer-->
       <footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
